
## New Tools

## New Features

## Fixes
- `gui/quickfort`: only print a help blueprint's text once even if the repeat setting is enabled
- `control-panel`: fix setting numeric preferences from the commandline

## Misc Improvements
- `control-panel`: Add realistic-melting tweak to control-panel registry
- `idle-crafting`: also support making shell crafts for workshops with linked input stockpiles
- `fix/stuck-worship`: reduced console output by default. Added ``--verbose`` and ``--quiet`` options.

## Removed

# 50.13-r5

## New Tools
- `embark-anyone`: allows you to embark as any civilization, including dead and non-dwarven civs
- `idle-crafting`: allow dwarves to independently satisfy their need to craft objects
- `gui/family-affairs`: (reinstated) inspect or meddle with pregnancies, marriages, or lover relationships
- `notes`: attach notes to locations on a fort map

## New Features
- `caravan`: DFHack dialogs for trade screens (both ``Bring goods to depot`` and the ``Trade`` barter screen) can now filter by item origins (foreign vs. fort-made) and can filter bins by whether they have a mix of ethically acceptable and unacceptable items in them
- `caravan`: If you have managed to select an item that is ethically unacceptable to the merchant, an "Ethics warning" badge will now appear next to the "Trade" button. Clicking on the badge will show you which items that you have selected are problematic. The dialog has a button that you can click to deselect the problematic items in the trade list.
- `confirm`: If you have ethically unacceptable items selected for trade, the "Are you sure you want to trade" confirmation will warn you about them
- `quickfort`: ``#zone`` blueprints now integrated with `preserve-rooms` so you can create a zone and automatically assign it to a noble or administrative role
- `exportlegends`: option to filter by race on historical figures page

## Fixes