@@ -16,9 +16,10 @@ Hold down :kbd:`Shift` and right click to exit, even if you are inspecting a
 substructure, no matter how deep.
 
 If you just want to browse without fear of accidentally changing anything, hit
-:kbd:`Ctrl`:kbd:`D` to toggle read-only mode. If you want `gui/gm-editor` to
-automatically pick up changes to game data in realtime, hit :kbd:`Alt`:kbd:`A`
-to switch to auto update mode.
+:kbd:`Ctrl`:kbd:`D` to toggle read-only mode.
+
+If you want `gui/gm-editor` to automatically pick up changes to game data in
+realtime, hit :kbd:`Alt`:kbd:`A` to switch to auto update mode.
 
 .. warning::
 
@@ -31,15 +32,13 @@ to switch to auto update mode.
 Usage
 -----
 
-``gui/gm-editor [-f]``
-    Open the editor on whatever is selected or viewed (e.g. unit/item/building/
-    engraving/etc.)
-``gui/gm-editor [-f] <lua expression>``
-    Evaluate a lua expression and opens the editor on its results. Field
-    prefixes of ``df.global`` can be omitted.
-``gui/gm-editor [-f] dialog``
-    Show an in-game dialog to input the lua expression to evaluate. Works the
-    same as the version above.
+::
+
+    gui/gm-editor [<options>] [<lua expression>]
+    gui/gm-editor [<options>] dialog
+
+When specifying a lua expression, field prefixes of ``df.global`` can be
+omitted.
 
 Examples
 --------
@@ -48,15 +47,22 @@ Examples
     Opens the editor on the selected unit/item/job/workorder/stockpile etc.
 ``gui/gm-editor world.items.all``
     Opens the editor on the items list.
+``gui/gm-editor df.unit.find(12345)``
+    Opens the editor on the unit with id 12345.
+``gui/gm-editor reqscript('gui/quickfort').view``
+    Opens the editor on a running instance of `gui/quickfort`. Useful for
+    debugging GUI tool state during development.
 ``gui/gm-editor --freeze scr``
     Opens the editor on the current DF viewscreen data (bypassing any DFHack
-    layers) and prevents the underlying viewscreen from getting updates while
-    you have the editor open.
+    tools that may be open) and prevents the underlying viewscreen from getting
+    updates while you are inspecting the data.
+``gui/gm-editor dialog``
+    Show an in-game dialog to input the lua expression to evaluate.
 
 Options
 -------
 
-``-f``, ``--freeze``
+``-f``, ``--freeze``, ``--safe-mode``
     Freeze the underlying viewscreen so that it does not receive any updates.
     This allows you to be sure that whatever you are inspecting or modifying
     will not be read or changed by the game until you are done with it. Note
@@ -65,6 +71,11 @@ Options
     `gui/gm-editor` as usual when the game is frozen. The black background will
     disappear when the last `gui/gm-editor` window that was opened with the
     ``--freeze`` option is dismissed.
+``--no-stringification``
+    Don't attempt to provide helpful string representations of potentially
+    unsafe fields like language_name when browsing the data structures. Specify
+    this option when you know you will be browsing garbage data that could lead
+    to crashes if accessed for stringification.
 
 Screenshot
 ----------
